<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:title="Uredi" />
    <item
        android:id="@+id/menu_delete"
        android:title="Izbriši" />
</menu>
