...
            <TextView android:id="@+id/sneakerSize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Veličina"/>
            <TextView android:id="@+id/sneakerPurpose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Namjena"/>
            <TextView android:id="@+id/sneakerPrice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cijena"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/optionsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dots_vert"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="Opcije" />
...
